"Recommended for you" spacing solved

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgrey;
+  background-color: rgb(228, 228, 228)!important;
 }
 
 h4 {
@@ -176,3 +176,9 @@ nav ul li a {
 
 
 /* WHAT'S NEW? */
+
+
+
+
+
+/* RECOMMENDED FOR YOU */
